fix scrollbar

--- a/src/output.css
+++ b/src/output.css
@@ -240,20 +240,8 @@
   .top-3 {
     top: calc(var(--spacing) * 3);
   }
-  .top-\[-29px\] {
-    top: -29px;
-  }
-  .top-\[-72\] {
-    top: -72;
-  }
-  .top-\[-72px\] {
-    top: -72px;
-  }
   .top-\[-85px\] {
     top: -85px;
-  }
-  .top-\[-\] {
-    top: -;
   }
   .top-\[14px\] {
     top: 14px;
@@ -272,12 +260,6 @@
   }
   .right-\[12px\] {
     right: 12px;
-  }
-  .right-\[90\] {
-    right: 90;
-  }
-  .right-\[90px\] {
-    right: 90px;
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
@@ -336,9 +318,6 @@
   .z-1000 {
     z-index: 1000;
   }
-  .z-10000 {
-    z-index: 10000;
-  }
   .col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -381,9 +360,6 @@
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
   }
-  .mt-8 {
-    margin-top: calc(var(--spacing) * 8);
-  }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
@@ -392,9 +368,6 @@
   }
   .mt-\[6px\] {
     margin-top: 6px;
-  }
-  .mt-\[9\] {
-    margin-top: 9;
   }
   .mt-\[12px\] {
     margin-top: 12px;
@@ -422,18 +395,6 @@
   }
   .mt-\[100px\] {
     margin-top: 100px;
-  }
-  .mr-\[90\] {
-    margin-right: 90;
-  }
-  .mr-\[90px\] {
-    margin-right: 90px;
-  }
-  .mb-4 {
-    margin-bottom: calc(var(--spacing) * 4);
-  }
-  .ml-auto {
-    margin-left: auto;
   }
   .line-clamp-2 {
     overflow: hidden;
@@ -553,9 +514,6 @@
   .h-\[50px\] {
     height: 50px;
   }
-  .h-\[58px\] {
-    height: 58px;
-  }
   .h-\[64px\] {
     height: 64px;
   }
@@ -598,12 +556,6 @@
   .h-full {
     height: 100%;
   }
-  .max-h-\[31\] {
-    max-height: 31;
-  }
-  .max-h-\[314px\] {
-    max-height: 314px;
-  }
   .max-h-\[378px\] {
     max-height: 378px;
   }
@@ -622,14 +574,14 @@
   .w-\[12px\] {
     width: 12px;
   }
-  .w-\[58px\] {
-    width: 58px;
-  }
   .w-\[60px\] {
     width: 60px;
   }
   .w-\[64px\] {
     width: 64px;
+  }
+  .w-\[85\] {
+    width: 85;
   }
   .w-\[92px\] {
     width: 92px;
@@ -682,6 +634,12 @@
   .w-\[815\.59px\] {
     width: 815.59px;
   }
+  .w-\[855\] {
+    width: 855;
+  }
+  .w-\[855px\] {
+    width: 855px;
+  }
   .w-fit {
     width: fit-content;
   }
@@ -690,12 +648,6 @@
   }
   .w-max {
     width: max-content;
-  }
-  .max-w-\[296\] {
-    max-width: 296;
-  }
-  .max-w-\[296px\] {
-    max-width: 296px;
   }
   .max-w-\[320px\] {
     max-width: 320px;
@@ -721,6 +673,9 @@
   .max-w-\[812px\] {
     max-width: 812px;
   }
+  .max-w-\[855px\] {
+    max-width: 855px;
+  }
   .max-w-\[1022px\] {
     max-width: 1022px;
   }
@@ -733,6 +688,9 @@
   .max-w-\[1232px\] {
     max-width: 1232px;
   }
+  .max-w-full {
+    max-width: 100%;
+  }
   .min-w-\[19px\] {
     min-width: 19px;
   }
@@ -740,6 +698,9 @@
     flex: 1;
   }
   .flex-shrink {
+    flex-shrink: 1;
+  }
+  .shrink {
     flex-shrink: 1;
   }
   .shrink-0 {
@@ -785,9 +746,6 @@
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-  .grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -849,6 +807,9 @@
   .gap-\[2px\] {
     gap: 2px;
   }
+  .gap-\[6\] {
+    gap: 6;
+  }
   .gap-\[6px\] {
     gap: 6px;
   }
@@ -908,6 +869,9 @@
   }
   .overflow-hidden {
     overflow: hidden;
+  }
+  .overflow-x-auto {
+    overflow-x: auto;
   }
   .overflow-x-hidden {
     overflow-x: hidden;
@@ -1135,6 +1099,12 @@
   .px-\[7\.5px\] {
     padding-inline: 7.5px;
   }
+  .px-\[8\] {
+    padding-inline: 8;
+  }
+  .px-\[8px\] {
+    padding-inline: 8px;
+  }
   .px-\[12px\] {
     padding-inline: 12px;
   }
@@ -1155,9 +1125,6 @@
   }
   .px-\[40px\] {
     padding-inline: 40px;
-  }
-  .px-\[72\] {
-    padding-inline: 72;
   }
   .px-\[72px\] {
     padding-inline: 72px;
@@ -1195,9 +1162,6 @@
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
   }
-  .py-\[6\] {
-    padding-block: 6;
-  }
   .py-\[6px\] {
     padding-block: 6px;
   }
@@ -1215,9 +1179,6 @@
   }
   .py-\[44px\] {
     padding-block: 44px;
-  }
-  .py-\[69\] {
-    padding-block: 69;
   }
   .py-\[69px\] {
     padding-block: 69px;
@@ -1275,6 +1236,9 @@
   }
   .pr-5 {
     padding-right: calc(var(--spacing) * 5);
+  }
+  .pr-\[6\] {
+    padding-right: 6;
   }
   .pr-\[6px\] {
     padding-right: 6px;
